--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -23,6 +23,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build the Docker image
+      env:
+        DOCKER_ID: ${{ secrets.DOCKER_ID }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
         docker build -t aharandi/multi-client ./client
         docker build -t aharandi/multi-nginx ./nginx
