--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -22,7 +22,7 @@ jobs:
  
     steps:
     - uses: actions/checkout@v1
-    - name: Build the Docker image
+    - name: Build and push the Docker image
       env:
         DOCKER_ID: ${{ secrets.DOCKER_ID }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
@@ -31,6 +31,8 @@ jobs:
         docker build -t aharandi/multi-nginx ./nginx
         docker build -t aharandi/multi-server ./server
         docker build -t aharandi/multi-worker ./worker
+        
+        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
         
         docker push aharandi/multi-client
         docker push aharandi/multi-nginx
