--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -8,34 +8,32 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
- 
+
     steps:
-    - uses: actions/checkout@v1
-    - name: Build the Docker image
-      run: |
-        docker build -t aharandi/react-test -f ./client/Dockerfile.dev ./client
-        docker run -e CI=true aharandi/react-test npm test
+      - uses: actions/checkout@v1
+      - name: Build the Docker image
+        run: |
+          docker build -t aharandi/react-test -f ./client/Dockerfile.dev ./client
+          docker run -e CI=true aharandi/react-test npm test
 
   build:
- 
     runs-on: ubuntu-latest
- 
-    steps:
-    - uses: actions/checkout@v1
-    - name: Build and push the Docker image
-      env:
-        DOCKER_ID: ${{ secrets.DOCKER_ID }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      run: |
-        docker build -t aharandi/multi-client ./client
-        docker build -t aharandi/multi-nginx ./nginx
-        docker build -t aharandi/multi-server ./server
-        docker build -t aharandi/multi-worker ./worker
-        
-        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-        
-        docker push aharandi/multi-client
-        docker push aharandi/multi-nginx
-        docker push aharandi/multi-server
-        docker push aharandi/multi-worker
 
+    steps:
+      - uses: actions/checkout@v1
+      - name: Build and push the Docker image
+        env:
+          DOCKER_ID: ${{ secrets.DOCKER_ID }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          docker build -t aharandi/multi-client:${{ github.sha }} ./client
+          docker build -t aharandi/multi-nginx:${{ github.sha }} ./nginx
+          docker build -t aharandi/multi-server:${{ github.sha }} ./server
+          docker build -t aharandi/multi-worker:${{ github.sha }} ./worker
+
+          echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+
+          docker push aharandi/multi-client:${{ github.sha }}
+          docker push aharandi/multi-nginx:${{ github.sha }}
+          docker push aharandi/multi-server:${{ github.sha }}
+          docker push aharandi/multi-worker:${{ github.sha }}
