--- a/.github/actions/get-kubeconfig/Dockerfile
+++ b/.github/actions/get-kubeconfig/Dockerfile
@@ -11,4 +11,4 @@ RUN curl -L https://github.com/digitalocean/doctl/releases/download/v${DOCTL_VER
 
 RUN /bin/echo "${DOCTL_SHA256}  /usr/local/bin/doctl" | sha256sum -c -
 
-CMD [ "doctl", "kubernetes", "cluster", "kubeconfig", "save", "${CLUSTER_NAME}" ]
+CMD sh -c "doctl kubernetes cluster kubeconfig save ${CLUSTER_NAME}"
