--- a/.github/actions/kubectl/Dockerfile
+++ b/.github/actions/kubectl/Dockerfile
@@ -1,6 +1,7 @@
 FROM gcr.io/cloud-builders/kubectl
 
 COPY entrypoint.sh /entrypoint.sh
+RUN cat $HOME/.kube/config
 
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["help"]
