--- a/.github/workflows/server-workflow-push-master.yml
+++ b/.github/workflows/server-workflow-push-master.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
           docker push aharandi/multi-server:${{ github.sha }}
-      - name: Deploying to Kubernetes cluster
+      - name: Getting kubeconfig
         env:
           DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
           CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
