--- a/.github/workflows/server-workflow-push-master.yml
+++ b/.github/workflows/server-workflow-push-master.yml
@@ -36,8 +36,7 @@ jobs:
         uses: ./.github/actions/get-kubeconfig
       - name: Deploying to Kubernetes cluster
         env:
-          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-          CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
+          KUBECONFIG: /github/home/.kube/config
         uses: ./.github/actions/kubectl
         with:
           args: set image deployment/server-deployment server=aharandi/multi-server:${{ github.sha }}
