--- a/.github/actions/kubectl/Dockerfile
+++ b/.github/actions/kubectl/Dockerfile
@@ -1,5 +1,6 @@
 FROM gcr.io/cloud-builders/kubectl
 
+RUN cat /github/home/.kube/config
 COPY entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
