--- a/.github/actions/kubectl/Dockerfile
+++ b/.github/actions/kubectl/Dockerfile
@@ -2,5 +2,4 @@ FROM gcr.io/cloud-builders/kubectl
 
 COPY entrypoint.sh /entrypoint.sh
 
-ENTRYPOINT ["/entrypoint.sh"]
-CMD ["help"]
+CMD ["cat", "$HOME/.kube/config"]
