--- a/.github/actions/kubectl/Dockerfile
+++ b/.github/actions/kubectl/Dockerfile
@@ -2,4 +2,4 @@ FROM gcr.io/cloud-builders/kubectl
 
 COPY entrypoint.sh /entrypoint.sh
 
-CMD ["cat", "$HOME/.kube/config"]
+CMD ["cat", "/github/home/.kube/config"]
