--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,5 +39,4 @@ jobs:
       - name: Deploying to Kubernetes cluster
         uses: docker://lachlanevenson/k8s-kubectl
         with:
-          entrypoint: sh -l -c
-          args: kubectl --kubeconfig=$HOME/.kubeconfig set image deployment/server-deployment server=aharandi/multi-server:${{ github.sha }}
+          args: --kubeconfig=$HOME/.kubeconfig set image deployment/server-deployment server=aharandi/multi-server:${{ github.sha }}
