--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,9 +35,8 @@ jobs:
           CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
         uses: digitalocean/action-doctl@master
         with:
-          args: kubernetes cluster kubeconfig show $CLUSTER_NAME > $HOME/.kubeconfig
+          args: kubernetes cluster kubeconfig show $CLUSTER_NAME > ${HOME}/.kubeconfig
       - name: Deploying to Kubernetes cluster
         uses: docker://lachlanevenson/k8s-kubectl
         with:
-          entrypoint: sh
-          args: -l -c "--kubeconfig=$HOME/.kubeconfig set image deployment/server-deployment server=aharandi/multi-server:${{ github.sha }}"
+          args: --kubeconfig=${HOME}/.kubeconfig set image deployment/server-deployment server=aharandi/multi-server:${{ github.sha }}
