--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,8 @@ jobs:
         with:
           args: kubernetes cluster kubeconfig show $CLUSTER_NAME > ${HOME}/.kubeconfig
       - name: Deploying to Kubernetes cluster
+        env:
+          KUBECONFIG: ${{ HOME }}/.kubeconfig
         uses: docker://lachlanevenson/k8s-kubectl
         with:
-          args: --kubeconfig=${{HOME}}/.kubeconfig set image deployment/server-deployment server=aharandi/multi-server:${{ github.sha }}
+          args: set image deployment/server-deployment server=aharandi/multi-server:${{ github.sha }}
