--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,10 +35,10 @@ jobs:
           CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
         uses: digitalocean/action-doctl@master
         with:
-          args: kubernetes cluster kubeconfig show $CLUSTER_NAME > ${HOME}/.kubeconfig
+          args: kubernetes cluster kubeconfig show $CLUSTER_NAME > ${{ GITHUB_WORKSPACE }}/.kubeconfig
       - name: Deploying to Kubernetes cluster
         env:
-          KUBECONFIG: ${{ HOME }}/.kubeconfig
+          KUBECONFIG: ${{ GITHUB_WORKSPACE }}/.kubeconfig
         uses: docker://lachlanevenson/k8s-kubectl
         with:
           args: set image deployment/server-deployment server=aharandi/multi-server:${{ github.sha }}
