--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,8 @@ jobs:
         uses: digitalocean/action-doctl@master
         with:
           args: kubernetes cluster kubeconfig show $CLUSTER_NAME > $GITHUB_WORKSPACE/.kubeconfig
+      - name: cat
+        run: cat ${GITHUB_WORKSPACE}/.kubeconfig
       - name: Deploying to Kubernetes cluster
         env:
           KUBECONFIG: ${GITHUB_WORKSPACE}/.kubeconfig
