--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,15 +20,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Build server image
-        run: docker build -t aharandi/multi-server:${{ github.sha }} ./server
-      - name: Pushing image to docker hub
-        env:
-          DOCKER_ID: ${{ secrets.DOCKER_ID }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-          docker push aharandi/multi-server:${{ github.sha }}
       - name: Getting kubeconfig
         env:
           DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
@@ -43,4 +34,4 @@ jobs:
           KUBECONFIG: ${GITHUB_WORKSPACE}/.kubeconfig
         uses: docker://lachlanevenson/k8s-kubectl
         with:
-          args: config view
+          args: --kubeconfig $GITHUB_WORKSPACE/.kubeconfig config view
