--- a/.github/workflows/server-workflow-push-master.yml
+++ b/.github/workflows/server-workflow-push-master.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Build server image
-        run: docker build -t aharandi/multi-server:${{ github.sha }} ./server
+        run: docker build -t aharandi/multi-server:${{ github.sha }} -t aharandi/multi-server:latest ./server
       - name: Pushing image to docker hub
         env:
           DOCKER_ID: ${{ secrets.DOCKER_ID }}
@@ -29,12 +29,17 @@ jobs:
         run: |
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
           docker push aharandi/multi-server:${{ github.sha }}
+          docker push aharandi/multi-server:latest
       - name: Getting kubeconfig
         env:
           DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
           CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
-        uses: ./.github/actions/get-kubeconfig
+        uses: digitalocean/action-doctl@master
+        with:
+          args: kubernetes cluster kubeconfig show $CLUSTER_NAME > /github/workspace/config
       - name: Deploying to Kubernetes cluster
-        uses: ./.github/actions/kubectl
+        env:
+          KUBECONFIG: /github/workspace/config
+        uses: docker://lachlanevenson/k8s-kubectl
         with:
           args: set image deployment/server-deployment server=aharandi/multi-server:${{ github.sha }}
