--- a/.github/workflows/server-workflow-pull_request-master.yml
+++ b/.github/workflows/server-workflow-pull_request-master.yml
@@ -14,14 +14,14 @@ on:
       - server/*/*/*/*/*/*/*/*/*/*
 
 jobs:
-  deploy:
-    name: Build, push and deploy the Docker image to Kubernetes cluster
+  build:
+    name: Build and push the Docker image to Docker Hub
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v1
       - name: Build server image
-        run: docker build -t aharandi/multi-server:${{ github.sha }} ./server
+        run: docker build -t aharandi/multi-server:${{ github.sha }} -t aharandi/multi-server:latest ./server
       - name: Pushing image to docker hub
         env:
           DOCKER_ID: ${{ secrets.DOCKER_ID }}
@@ -29,9 +29,5 @@ jobs:
         run: |
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
           docker push aharandi/multi-server:${{ github.sha }}
-      - name: Deploying to Kubernetes cluster
-        uses: steebchen/kubectl@master
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-        with:
-          args: set image deployment/server-deployment server=aharandi/multi-server:${{ github.sha }}
+          docker push aharandi/multi-server:latest
+
