--- a/.github/workflows/server-workflow-push-master.yml
+++ b/.github/workflows/server-workflow-push-master.yml
@@ -14,8 +14,8 @@ on:
       - server/*/*/*/*/*/*/*/*/*/*
 
 jobs:
-  deploy:
-    name: Build, push and deploy the Docker image to Kubernetes cluster
+  build:
+    name: Build and publish the Docker image to Docker Hub
     runs-on: ubuntu-latest
 
     steps:
@@ -30,7 +30,14 @@ jobs:
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
           docker push aharandi/multi-server:${{ github.sha }}
           docker push aharandi/multi-server:latest
+  deploy:
+    name: Deploy docker image to Kubernetes cluster
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
       - name: Getting kubeconfig
+        if: github.event_name == 'push'
         env:
           DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
           CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
