--- a/.github/workflows/worker-workflow-push-master.yml
+++ b/.github/workflows/worker-workflow-push-master.yml
@@ -1,5 +1,5 @@
-name: Worker push master
-on: 
+name: Worker master
+on:
   push:
     paths:
       - worker/*
@@ -14,14 +14,14 @@ on:
       - worker/*/*/*/*/*/*/*/*/*/*
 
 jobs:
-  deploy:
-    name: Build, push and deploy the Docker image to Kubernetes cluster
+  build:
+    name: Build and publish the Docker image to Docker Hub
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v1
       - name: Build worker image
-        run: docker build -t aharandi/multi-worker:${{ github.sha }} ./worker
+        run: docker build -t aharandi/multi-worker:${{ github.sha }} -t aharandi/multi-server:worker ./worker
       - name: Pushing image to docker hub
         env:
           DOCKER_ID: ${{ secrets.DOCKER_ID }}
@@ -29,9 +29,25 @@ jobs:
         run: |
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
           docker push aharandi/multi-worker:${{ github.sha }}
-      - name: Deploying to Kubernetes cluster
-        uses: steebchen/kubectl@master
+          docker push aharandi/multi-worker:latest
+  deploy:
+    name: Deploy docker image to Kubernetes cluster
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Getting kubeconfig
+        if: github.event_name == 'push'
         env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+          CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
+        uses: digitalocean/action-doctl@master
+        with:
+          args: kubernetes cluster kubeconfig show $CLUSTER_NAME > /github/workspace/config
+      - name: Deploying to Kubernetes cluster
+        if: github.event_name == 'push'
+        env:
+          KUBECONFIG: /github/workspace/config
+        uses: docker://lachlanevenson/k8s-kubectl
         with:
           args: set image deployment/worker-deployment worker=aharandi/multi-worker:${{ github.sha }}
