--- a/.github/workflows/server-workflow-push-master.yml
+++ b/.github/workflows/server-workflow-push-master.yml
@@ -45,6 +45,7 @@ jobs:
         with:
           args: kubernetes cluster kubeconfig show $CLUSTER_NAME > /github/workspace/config
       - name: Deploying to Kubernetes cluster
+        if: github.event_name == 'push'
         env:
           KUBECONFIG: /github/workspace/config
         uses: docker://lachlanevenson/k8s-kubectl
