--- a/.github/workflows/worker-workflow-push-master.yml
+++ b/.github/workflows/worker-workflow-push-master.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Build worker image
-        run: docker build -t aharandi/multi-worker:${{ github.sha }} -t aharandi/multi-server:worker ./worker
+        run: docker build -t aharandi/multi-worker:${{ github.sha }} -t aharandi/multi-worker:latest ./worker
       - name: Pushing image to docker hub
         env:
           DOCKER_ID: ${{ secrets.DOCKER_ID }}
